# trace32-cli

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  maintainer.mk  rw_assist.c  setup.cfg  setup.py  trace32-cli.py
capi/: readme.txt  release.txt
capi/dll/: makefile.linux  makefile.macosx  makefile_tcp.linux  t32api.c
capi/dlltest/: hrtestdll.c  makedlltest.bat
capi/src/: hlinknet.c  hremote.c  t32.h  t32nettcp.c  t32nettcp.h  tcpsimple2.c  tcpsimple2.h
capi/test/: readme.txt  t32apicmd.c  t32apinotify.c  t32bundle.c  t32fdxhost.c  t32notifications.c  t32rem.c  t32remotedo.c  t32remtest.c
syntax32/: parse.py
t32wrap/: __init__.py  common.py  t32_ctl.py  t32api.py  t32iface.py  t32run.py  t32wrap.py
trace32_cli/: __init__.py  t32api.py  t32iface.py  t32run.py  trace32_cli.py  version.py
