[metadata]
name = trace32-cli
description = CLI tool for controlling TRACE32 in a scriptable way.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = trace32 cli jtag
license = MIT License
license_files = LICENSE
url = https://github.robot.car/cruise/trace32-cli
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: SunOS/Solaris
    Operating System :: Microsoft :: Windows
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)
    Topic :: Scientific/Engineering

[options]
packages = trace32_cli
include_package_data = True
python_requires = >= 3.6

[options.entry_points]
console_scripts =
    trace32-cli = trace32_cli:main
